test-fixtures/machine-dsl-tests/tests/compile_fail/canonical_transition_rejects_string_input_identity.stderr
error[E0425]: cannot find function `transition` in module `meerkat`
 --> tests/compile_fail/canonical_transition_rejects_string_input_identity.rs:5:22
  |
5 |     let _ = meerkat::transition(&state, "RegisterSession".to_string(), &meerkat::EmptyContext);
  |                      ^^^^^^^^^^ not found in `meerkat`
